objects/SRcharacter__c/SRcharacter__c.object-meta.xml
<CustomObject>
    <label>SRcharacter</label>
    <nameField>
        <label>Handle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SRcharacters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>