objects/SRcharacter__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>