objects/SRcharacter__c/fields/ErrorStateMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorStateMessage__c</fullName>
    <description>Because all the logic is on the frontend, we store any error message here</description>
    <label>ErrorStateMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>