objects/SRcharacter__c/fields/Essence__c.field-meta.xml
<CustomField>
    <fullName>Essence__c</fullName>
    <label>Essence</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>