objects/SRcharacter__c/fields/InitDice__c.field-meta.xml
<CustomField>
    <fullName>InitDice__c</fullName>
    <label>InitDice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>