objects/SRcharacter__c/fields/Magic__c.field-meta.xml
<CustomField>
    <fullName>Magic__c</fullName>
    <label>Magic</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>