objects/SRcharacter__c/fields/MagicalTradition__c.field-meta.xml
<CustomField>
    <fullName>MagicalTradition__c</fullName>
    <label>MagicalTradition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shamanic</fullName>
            </value>
            <value>
                <fullName>Hermetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>