objects/SRcharacter__c/fields/MagicianTypeId__c.field-meta.xml
<CustomField>
    <fullName>MagicianTypeId__c</fullName>
    <label>MagicianTypeId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>