objects/SRcharacter__c/fields/MetaraceTemplate__c.field-meta.xml
<CustomField>
    <fullName>MetaraceTemplate__c</fullName>
    <label>MetaraceTemplate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>