objects/SRcharacter__c/fields/Quickness__c.field-meta.xml
<CustomField>
    <fullName>Quickness__c</fullName>
    <label>Quickness</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>