objects/SRcharacter__c/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>