objects/SRcharacter__c/fields/Real_Name__c.field-meta.xml
<CustomField>
    <fullName>Real_Name__c</fullName>
    <label>Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>