objects/SRcharacter__c/fields/Short_Notes__c.field-meta.xml
<CustomField>
    <fullName>Short_Notes__c</fullName>
    <label>Short Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>