objects/SRcharacter__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>