objects/SRcharacter__c/fields/TotemId__c.field-meta.xml
<CustomField>
    <fullName>TotemId__c</fullName>
    <label>TotemId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>