objects/SRcharacter__c/fields/Willpower__c.field-meta.xml
<CustomField>
    <fullName>Willpower__c</fullName>
    <label>Willpower</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>